# maestria

./: README
datos/csv/: memory.csv
datos/csv/colapso/: 10-4-2.csv  5-1-4.csv  5-3-3.csv  5-4-2.csv
datos/csv/dof/: 10-1-4.csv  10-4-3.csv  20-0-4.csv  20-3-3.csv  20-4-2.csv  20-4-3.csv  5-0-4.csv  5-1-4.csv  5-4-3.csv
tesis/: abstract.tex  adendo.tex  anexo.tex  conclusion.tex  discusion.tex  introduccion.tex  marco.tex  metodologia.tex  portada.tex  resultados.tex  resumen.tex  tesis.tex
tesis/csv/colapso/: 10-0-4.csv  10-2-3.csv  10-3-3.csv  5-0-4.csv  5-2-3.csv  5-4-3.csv
tesis/csv/dof/: 10-0-4.csv  10-2-3.csv  10-3-3.csv  10-4-2.csv  20-1-4.csv  20-2-3.csv  5-2-3.csv  5-3-3.csv  5-4-2.csv
vpg/: CMakeLists.txt  Graph.cpp  Graph.hpp  GraphTester.cpp  GraphTester.hpp  README  Route.cpp  Route.hpp  bars.cpp  bars.hpp  collate  collate.cpp  generate_lattice.cpp  generate_realization.cpp  generate_realizations.py  main.cpp  sweep-solve.cpp  vpg.cpp  vpg.hpp
vpg/tests/: test_backtrack.cpp  test_collapse_side_by_side.cpp  test_collect_pebbles.cpp  test_graph.cpp
